solve issue in apperance on mobile view

--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@ h1 {
 }
 @media screen and (max-width: 400px) {
   h1 {
-    font-size: 25px;
-    font-weight: 500;
+    font-size: 20px;
+    font-weight: 400;
   }
 }
 h1 span img {
